Change some SearchResponses to Void instead of Object